<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Activity Transitions</string>
    <string name="taiwan_info">臺灣是位於亞洲東部、太平洋西北側的島嶼，地處琉球群島與菲律賓群島之間，西隔臺灣海峽與歐亞大陸相望；面積約3.6萬平方公里，其中7成為山地與丘陵，平原則主要集中於西部沿海，地形海拔變化大。由於地處熱帶及亞熱帶氣候區之交界，自然景觀與生態系資源相當豐富而多元[7]。現今人口約2340萬人，構成上以臺灣原住民族、河洛人、客家人、外省人等4大族群，其中河洛人為最大群體。人口分佈上，超過7成集中於西部的5大都會區，其中以首要都市臺北為中心的臺北都會區最大，亦是亞洲主要都會圈之一。</string>
    <string name="sanya_info">三亞市，古稱崖州，是中華人民共和國海南省的地級市，位於海南島的最南端，也是全中國最南端的已開發的旅遊城市，為海南島著名的熱帶海濱旅遊城市和海港。</string>
    <string name="chengde_info">承德市是中國河北省東北部下轄的一個地級市。省內與唐山市、張家口市、秦皇島市，省外與北京市、天津市，遼寧省朝陽市、內蒙古自治區赤峰市、內蒙古自治區錫林郭勒盟毗鄰。是新中國普通話標準音採集地，中國國家歷史文化名城。</string>
    <string name="great_wall_info">長城，是古代中國為抵禦不同時期塞北游牧部落聯盟的侵襲，修築規模浩大的軍事工程的統稱。長城東西綿延上萬華里，因此又稱作萬里長城。現存的長城遺蹟主要為始建於14世紀的明長城，西起嘉峪關，東至虎山長城，長城遺址跨越北京、天津、青海、山東、內蒙等15個省市自治區，總計有43721處長城遺產。長城同時也是自人類文明以來最巨大的單一建築物，以及修繕時間持續最久的建築物。</string>
    <string name="chong_cing_info">重慶市（四川話拼音：Cóngqìn；國際音標：/tsʰoŋ˨˩tɕʰin˨˩˦/；漢語拼音：Chóngqìng）簡稱渝，別稱山城、渝都、橋都、霧都，是中華人民共和國的中央直轄市之一，2010年被住房和城鄉建設部列為中國大陸五大國家中心城市之一，國家歷史文化名城，世界溫泉之都；國務院定位的國際大都市，長江上游地區經濟中心、金融中心和創新中心，及政治、航運、文化、科技、教育、通信、設計等中心，也是大陸西部最大的水、陸、空綜合交通樞紐。</string>
    <string name="taiwan">臺灣</string>
    <string name="sanya">三亞市</string>
    <string name="chengde">承德市</string>
    <string name="great_wall">長城</string>
    <string name="chong_cing">重慶市</string>
    
</resources>
